Apply Google Java Style Guide to the project
- Apply project-wide formatting using the Google Java Style (intellij-java-google-style.xml)